
syntax = "proto3";

package go.micro.srv.ns;

service Ns {
      rpc CreateNameSpace(NS)returns (NSResponse){}
      rpc NamespaceList(Empty)returns (NamespaceListResponse){}
      rpc DeleteNamespace(NamespaceName)returns (Empty){}
      rpc EditNamespace(NS)returns (Empty){}
}

message NS {
	string monitors = 1;
	string adminSecretName = 2;
	string pool = 3;
	string userId = 4;
	string userSecretName = 5;
	string namespace = 6;
	string adminId = 7;
	bool isdefault = 8;
	string cidrblock  = 9;
	string namespacesexcludeips =10;
	string  namespaces = 11;
	string namespacename = 12;
	string cpu = 13;
	string memory = 14;
	string storage  = 15;
	int32  cputhreshold = 16;
	int32  memorythreshold = 17;
	int32  storagethreshold  = 18;
	bool isdelete =19;
	string creator = 20;

}

message NSResponse{
}

message Empty {

}

message NamespaceListResponse {
	repeated NS namespaces = 1;
}

message NamespaceName {
	string namespacename = 1;
}